Updates: Readme, Index view

--- a/src/app/views/index.html
+++ b/src/app/views/index.html
@@ -13,6 +13,8 @@
 
     <div class="row">
         <div class="col-xs-12">
+            <h2>Your bootstrap screen size is: '<span data-bind="text: size"></span>'</h2>
+
             <div class="page-header">
                 <h2>Loaded Routes</h2>
             </div>
